--- a/main.yml
+++ b/main.yml
@@ -1,16 +1,15 @@
 ---
-- name: Install and Configure ISV Linux
+- name: Install ISV Linux
   hosts: all
   become: true
   gather_facts: true
 
-  pre-tasks:
-  
+  pre_tasks:
   - name: Validate if there is a firewall rule to a URL
     run_once: true
     shell: curl https://ipinfo.io/ip
     register: curl_urlaccess
     failed_when: ( curl_urlaccess.rc > 0 )
-
+       
   roles:
     - role: isv-linux-role
