Creating test tasks

--- a/isv-linux-role/tasks/main.yml
+++ b/isv-linux-role/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
-- name: Copy files to install w3id pam for {{ inventory_hostname_short }}
-  debug:
-    msg: "Just a test!"
-  
+- name: "Copy files to install w3id pam for {{ inventory_hostname_short }}"
+  ansible.builtin.unarchive:
+  src: "{{ playbook_dir }}/isv-linux-role/files/rhel-{{ ansible_distribution_major_version }}.zip"
+  dest: "/tmp/"
+  mode: 0755
+
+- name: "Install ISV PAM file for {{ ansible_architecture }} System"
+  ansible.builtin.dnf:
+    name: "/tmp/{{ item }}"
+    state: present
+  with_items: 
+    - pam-ibm-auth-1.0.6.1-0.{{ ansible_architecture }}.rpm
+    - ibm-auth-api-1.0.6.1-0.{{ ansible_architecture }}.rpm
