--- a/main.yml
+++ b/main.yml
@@ -7,9 +7,11 @@
   pre_tasks:
   - name: Validate if there is a firewall rule to a URL
     run_once: true
-    shell: curl https://ipinfo.io/ip
+    ansible.builtin.shell: curl https://ipinfo.io/ip
     register: curl_urlaccess
     failed_when: ( curl_urlaccess.rc > 0 )
        
-  roles:
-    - role: isv-linux-role
+  tasks:
+    - name: Run isv-linux-role
+      ansible.builtin.include_role:
+        name: isv-linux-role
